# v4d_project

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  gitPullSubmodules.sh  initProject.sh  watchShaders.sh
dynamicLibs/terrainGenerator/: CMakeLists.txt  autobuild.sh  autobuild_windows.sh  terrainGenerator.cpp
res/: drone2.blend
src/: Client.hpp  (+26 more)
src/v4d/game/: CMakeLists.txt  ClientSideEntity.hpp  Collider.hpp  Entity.cpp  Entity.h  EntityConfigFile.cpp  EntityConfigFile.h  Game.h  Rigidbody.hpp  ServerSideEntity.hpp  ServerSidePlayer.hpp  physics.hh  random.hh
src/v4d/game/colliders/: BoxCollider.hpp  CapsuleCollider.hpp  ConeCollider.hpp  CylinderCollider.hpp  RingCollider.hpp  SphereCollider.hpp  TriangleCollider.hpp
src/v4d/modules/: CMakeLists.txt
src/v4d/modules/V4D_andromeda/: Celestial.cpp  Celestial.h  Entity.hpp  GalacticPosition.hpp  GalaxyGenerator.cpp  GalaxyGenerator.h  GalaxyGenerator.hpp  StarSystem.cpp  StarSystem.h  TerrainGeneratorLib.cpp  TerrainGeneratorLib.h  andromeda.cpp  console.cpp  module.conf  noise_functions.hpp  physics.cpp  seeds.hh
src/v4d/modules/V4D_andromeda/PlanetRenderer/: CubeToSphere.hpp  PlanetTerrain.cpp  PlanetTerrain.h  TerrainGeneratorCommon.hh
src/v4d/modules/V4D_andromeda/TerrainGenerator/: CMakeLists.txt  V4D_andromeda.TerrainGenerator.cpp  autobuild.sh  autobuild_windows.sh
src/v4d/modules/V4D_andromeda/assets/shaders/: atmosphere.glsl  galaxy.glsl
src/v4d/modules/V4D_andromeda/celestials/: Asteroid.cpp  Asteroid.h  BlackHole.cpp  BlackHole.h  CelestialType.hh  GasGiant.cpp  GasGiant.h  Planet.cpp  Planet.h  Star.cpp  Star.h
src/v4d/modules/V4D_avatar/: avatar.cpp  module.conf
src/v4d/modules/V4D_avatar/assets/resources/: animator.ini  avatar.ini
src/v4d/modules/V4D_basicscene/: basicscene.cpp  client.cpp  common.hh  game.cpp  input.cpp  module.conf  objects.cpp  renderer.cpp  server.cpp
src/v4d/modules/V4D_basicscene/assets/shaders/: testAabb.glsl
src/v4d/modules/V4D_buildsystem/: actions.hh  buildsystem.cpp  client.cpp  common.hh  game.cpp  input.cpp  module.conf  objects.cpp  renderer.cpp  server.cpp
src/v4d/modules/V4D_buildsystem/assets/shaders/: block.glsl  blocks.glsl  crosshair.glsl
src/v4d/modules/V4D_buildsystem/utils/: Block.hpp  Build.hpp  BuildInterface.hpp  TmpBlock.hpp
src/v4d/modules/V4D_bullet/: module.conf  physics.cpp  renderer.cpp
src/v4d/modules/V4D_flycam/: common.hh  flycam.cpp  game.cpp  input.cpp  module.conf
src/v4d/modules/V4D_galaxy4d/: common.hh  galaxy4d.cpp  module.conf
src/v4d/modules/V4D_galaxy4d/assets/resources/: cake.mtl  drone2.mtl
src/v4d/modules/V4D_galaxy4d/assets/shaders/: terrain.dig.sphere.glsl
src/v4d/modules/V4D_hybrid/: Texture2D.hpp  camera_options.hh  hybridRenderer.cpp  input.cpp  module.conf  renderer.cpp  renderer_old.cpp
src/v4d/modules/V4D_hybrid/assets/shaders/: overlay_lines.glsl  overlay_text.glsl  raster.glsl  raster_glass.glsl  raster_lighting.glsl  raster_material.glsl  raster_visibility.glsl  raster_visibility_full.glsl  rtx_lighting.glsl  rtx_visibility.glsl  transparent.glsl  v4d_histogram.glsl  v4d_post.glsl  v4d_postProcessing.glsl  v4d_raycast.glsl  v4d_thumbnail.glsl
src/v4d/modules/V4D_hybrid/glsl_includes/: GeometryPushConstant.glsl  V2F.glsl  V2G.glsl  core_pbr.glsl  pl_fog_raster.glsl  pl_histogram.glsl  pl_lighting_raster.glsl  pl_lighting_rays.glsl  pl_overlay.glsl  pl_post.glsl  pl_raycast.glsl  pl_thumbnail.glsl  pl_transparent.glsl  pl_visibility_raster.glsl  pl_visibility_rays.glsl  raster_pbr.glsl  rtx.glsl  rtx_pbr.glsl  set0_base.glsl  set1_fog_raster.glsl  set1_lighting_and_fog.glsl  set1_lighting_raster.glsl  set1_lighting_rays.glsl  set1_post.glsl  set1_raycast.glsl  set1_thumbnail.glsl  set1_transparent.glsl  set1_visibility_raster.glsl  set1_visibility_rays.glsl
src/v4d/modules/V4D_multiplayer/: ClientSideObjects.hh  ServerSideObjects.hh  actions.hh  client.cpp  common.hh  input.cpp  module.conf  multiplayer.cpp  objects.cpp  server.cpp
src/v4d/modules/V4D_planetdemo/: common.hh  game.cpp  module.conf  planetdemo.cpp  renderer.cpp
src/v4d/modules/V4D_planetdemo/PlanetsRenderer/: CubeToSphere.hpp  PlanetAtmosphere.hpp  PlanetAtmosphereShaderPipeline.hpp  PlanetTerrain.hpp
src/v4d/modules/V4D_planetdemo/TerrainGenerator/: CMakeLists.txt  V4D_planetdemo.TerrainGenerator.cpp  autobuild.sh  autobuild_windows.sh
src/v4d/modules/V4D_planetdemo/_assets/shaders/: atmosphere.glsl  planet.glsl
src/v4d/modules/V4D_planetdemo/assets/_resources/: rocks_dirt_ground_ambientOcclusion.tga
src/v4d/modules/V4D_planetdemo/assets/resources/: rocks_dirt_ground_Normal.tga  rocks_dirt_ground_height.tga
src/v4d/modules/V4D_raytracing/: Mesh.h  RayCast.hh  RenderableGeometryEntity.h  Texture2D.hpp  camera_options.hh  elements.hh  module.conf  raytracing.cpp  substances.hh
src/v4d/modules/V4D_raytracing/glsl_includes/: core_pbr.glsl  pl_fog_raster.glsl  pl_histogram.glsl  pl_overlay.glsl  pl_post.glsl  pl_raster.glsl  pl_raycast.glsl  pl_thumbnail.glsl  set0.glsl  set1_collision.glsl  set1_histogram.glsl  set1_overlay.glsl  set1_post.glsl  set1_raycast.glsl  set1_rendering.glsl
src/v4d/modules/V4D_test/: module.conf  module.cpp  test.cpp  tests.cxx
src/v4d/modules/basicscene/: game.cpp  module.conf  rendering.cpp
src/v4d/modules/galaxy4d/: actions.hh  common.hh  galaxy4d.cpp
src/v4d/modules/hybrid/: renderer.cpp
src/v4d/modules/incubator_galaxy4d/: Planets.hpp  config.cmake  module.cpp  planets.glsl
src/v4d/modules/incubator_galaxy4d/PlanetsRenderer/: CubeToSphere.hpp  PlanetAtmosphere.hpp  PlanetAtmosphereShaderPipeline.hpp  PlanetShaderPipeline.hpp  PlanetTerrain.hpp  PlanetTerrainShaderPipeline.hpp  PlanetaryTerrain.hpp  PlanetsRenderer.hpp
src/v4d/modules/incubator_pbr_test/: config.cmake  module.cpp
src/v4d/modules/incubator_simplemovearound/: module.cpp
src/v4d/modules/test1/: config.cmake  module.cpp
src/v4d/modules/test_planets_rtx/: config.cmake  module.cpp
src/v4d/modules/test_planets_rtx/PlanetsRenderer/: CubeToSphere.hpp  PlanetAtmosphere.hpp  PlanetTerrain.hpp
(+215 files in other folders)
